--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="/home/dani/Downloads/jetty-distribution-9.2.19.v20160908/lib/servlet-api-3.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/lib/servlet-api-3.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
